syntax = "proto3";

option java_package = "edu.tigers.sumatra.gamelog.proto";

import "ssl_vision_wrapper.proto";
import "ssl_gc_referee_message.proto";

message LabelerMetadata {
  uint32 num_cameras = 1;
  repeated uint64 message_offsets = 2;
  uint32 num_passing_events = 3;
  uint32 num_goal_shot_events = 4;
}

message LabelerFrame {
  uint64 timestamp = 1;
  oneof frame {
    SSL_WrapperPacket vision_frame = 2;
    Referee referee_frame = 3;
  }
}

message LabelerFrameGroup {
  repeated LabelerFrame frames = 1;
}
